Initial commit og ICS

--- a/index.html
+++ b/index.html
@@ -423,6 +423,31 @@
         </div>
     </div>
 
+    <div class="stats-section">
+      <div class="stats-header">
+        <h2>Our AI &amp; Data Achievements</h2>
+        <p>Delivering excellence in AI, ML, and Data Analytics</p>
+      </div>
+      <div class="stats-row">
+        <div class="stats-col">
+          <div class="stats-number">120+</div>
+          <div class="stats-label">AI &amp; Data Specialists</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">175+</div>
+          <div class="stats-label">AI/ML Models</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">345+</div>
+          <div class="stats-label">Data Analytics Dashboards</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">1630+</div>
+          <div class="stats-label">Projects Delivered</div>
+        </div>
+      </div>
+    </div>
+  
     <section class="section  gray">
         <div class="container">
             <h1 class="title wow fadeInUp" data-wow-delay="0.35s">{{'Service' | translate}}</h1>
@@ -885,78 +910,34 @@
       });
     </script>
 
-    <!-- Card grid section after slider -->
-    <div class="container card-grid-section" style="margin-top: 40px;">
-        <!-- First Row: 50% text, 50% 2 cards -->
-        <div class="card-row-fixed">
-            <div class="left-space left-50">
-                <h2 style="font-weight:bold;">Welcome to ICS Solutions</h2>
-                <p style="font-size:1.1rem;">Empowering your business with innovative technology and creative solutions for a
-                    brighter tomorrow.</p>
-            </div>
-            <div class="card-group group-50">
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-lightbulb-o"></i></div>
-                    <div class="card-title">Innovation</div>
-                    <div class="card-desc">We bring fresh ideas and creative thinking to every project.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-users"></i></div>
-                    <div class="card-title">Teamwork</div>
-                    <div class="card-desc">Collaboration is at the heart of everything we do.</div>
-                </div>
-            </div>
-        </div>
-        <!-- Second Row: 25% empty, 75% 3 cards -->
-        <div class="card-row-fixed">
-            <div class="left-space left-25"></div>
-            <div class="card-group group-75">
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-rocket"></i></div>
-                    <div class="card-title">Fast Delivery</div>
-                    <div class="card-desc">Quick turnaround times without compromising quality.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-shield"></i></div>
-                    <div class="card-title">Security</div>
-                    <div class="card-desc">Your data and privacy are always protected with us.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-cogs"></i></div>
-                    <div class="card-title">Customization</div>
-                    <div class="card-desc">Solutions tailored to fit your unique business needs.</div>
-                </div>
-            </div>
-        </div>
-        <!-- Third Row: 4 cards, each 25% width -->
-        <div class="card-row-fixed">
-            <div class="left-space left-none"></div>
-            <div class="card-group group-100">
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-line-chart"></i></div>
-                    <div class="card-title">Growth</div>
-                    <div class="card-desc">Helping your business reach new heights.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-headphones"></i></div>
-                    <div class="card-title">Support</div>
-                    <div class="card-desc">24/7 assistance for all your needs.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-globe"></i></div>
-                    <div class="card-title">Global Reach</div>
-                    <div class="card-desc">Connecting you to opportunities worldwide.</div>
-                </div>
-                <div class="custom-card">
-                    <div class="icon-circle"><i class="fa fa-trophy"></i></div>
-                    <div class="card-title">Excellence</div>
-                    <div class="card-desc">Striving for the highest standards in all we do.</div>
-                </div>
-            </div>
-        </div>
-    </div>
+  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Pyramid Card Section after slider -->
+    <!-- Stats Section (below card grid) -->
+    <div class="stats-section">
+      <div class="stats-header">
+        <h2>Our AI &amp; Data Achievements</h2>
+        <p>Delivering excellence in AI, ML, and Data Analytics</p>
+      </div>
+      <div class="stats-row">
+        <div class="stats-col">
+          <div class="stats-number">120+</div>
+          <div class="stats-label">AI &amp; Data Specialists</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">175+</div>
+          <div class="stats-label">AI/ML Models</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">345+</div>
+          <div class="stats-label">Data Analytics Dashboards</div>
+        </div>
+        <div class="stats-col">
+          <div class="stats-number">1630+</div>
+          <div class="stats-label">Projects Delivered</div>
+        </div>
+      </div>
+    </div>
   
 </body>
 
