Full stack development and oracle page

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                                     <li><a href="#">Service Assurance </a></li>
 
-                                    <li><a href="#">Oracle Unified Assurance</a></li>
+                                    <li><a href="/services/service-assurance/oracle_unified_assurance.html">Oracle Unified Assurance</a></li>
                                     <li><a href="#">ServiceNow </a></li>
                                     <li><a href="#">BMC Remedy</a></li>
                                 </ul>
@@ -152,7 +152,7 @@
 
                 <li class="language-wrapper">
                     <span id="eng"><a href="#" class="selected">EN</a></span>
-                    <span id="divider" style="color:#fff; font-size:16px; padding:0 18px;">|</span>
+                    <span id="divider" style="color:#fff; font-size:16px; ">|</span>
                     <span id="fr"><a href="#">FR</a></span>
                 </li>
             </ul>
