Oracle assurance page design

--- a/services/it-consulting/infrastructure-assessment-optimization.html
+++ b/services/it-consulting/infrastructure-assessment-optimization.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Problem Management HTML</h1>
+    <h1>infrastructure-assessment-optimization</h1>
 </body>
 </html>
