--- a/services/it-professional-services/cloud-infrastructure-services.html
+++ b/services/it-professional-services/cloud-infrastructure-services.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>custom-application-development</h1>
+    <h1>Cloud & Infrastructure Services</h1>
 </body>
 </html>
