--- a/services/service-assurance/bmc-remedy.html
+++ b/services/service-assurance/bmc-remedy.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>custom-application-development</h1>
+    <h1>BMC Remedy</h1>
 </body>
 </html>
