--- a/services/application-software-development/cloud-native-development.html
+++ b/services/application-software-development/cloud-native-development.html
@@ -4,8 +4,319 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+                <!-- Bootstrap -->
+    <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Style -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- Responsive -->
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@6.7.0/css/flag-icons.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+
 </head>
 <body>
-    <h1>cloud-native-development</h1>
+  
+    <nav>
+        <div class="wrapper">
+            <div class="logo">
+                <a href="index.html" class="href"><img src="/images/logo_croped.png" alt=""></a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="../../index.html">Home</a></li>
+
+                <li><a href="#">Services</a>
+                    <div class="mega-box">
+                        <div class="content">
+
+                            <div class="row">
+                                <ul class="mega-links">
+                                    <li><a href="#">Application Software Development </a></li>
+
+                                    <li><a
+                                            href="/services/application-software-development/custom-application-development.html">Custom
+                                            Application Development</a></li>
+                                    <li><a
+                                            href="/services/application-software-development/web-mobile-development.html">Web
+                                            & Mobile
+                                            Development</a></li>
+                                    <li><a
+                                            href="/services/application-software-development/enterprise-software-solutions.html">Enterprise
+                                            Software Solutions</a></li>
+                                    <li><a
+                                            href="/services/application-software-development/cloud-native-development.html">Cloud-Native
+                                            Development</a></li>
+                                    <li><a
+                                            href="/services/application-software-development/api-development-integration.html">API
+                                            Development & Integration</a></li>
+                                    <li><a
+                                            href="/services/application-software-development/legacy-system-modernization.html">Legacy
+                                            System Modernization</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <ul class="mega-links">
+                                    <li><a href="#">IT Consulting </a></li>
+
+                                    <li><a href="/services/it-consulting/full-stack-development.html">Full Stack
+                                            Development </a></li>
+                                    <li><a href="/services/it-consulting/technology-strategy_roadmapping.html">Technology
+                                            Strategy &
+                                            Roadmapping </a></li>
+                                    <li><a href="/services/it-consulting/digital-transformation-consulting.html">Digital
+                                            Transformation
+                                            Consulting</a></li>
+                                    <li><a href="/services/it-consulting/infrastructure-assessment-optimization.html">Infrastructure
+                                            Assessment & Optimization</a></li>
+                                    <li><a href="/services/it-consulting/risk-management-compliance.html">Risk
+                                            Management & Compliance</a>
+                                    </li>
+
+
+                                </ul>
+                            </div>
+                            <div class="row image-row">
+                                <img src="/images/2image_about_us_home_freepik.jpg" alt="Descriptive Alt Text" />
+                            </div>
+                            <div class="row">
+                                <ul class="mega-links">
+                                    <li>
+                                        <a href="#">IT Professional Services </a>
+
+                                    </li>
+                                    <li><a
+                                            href="/services/it-professional-services/it-staffing-resource-augmentation.html">IT
+                                            Staffing &
+                                            Resource Augmentation</a></li>
+                                    <li><a href="/services/it-professional-services/project-management-delivery.html">
+                                            Project Management
+                                            & Delivery</a></li>
+                                    <li><a href="/services/it-professional-services/system-integration-services.html">System
+                                            Integration
+                                            Services</a></li>
+                                    <li><a href="/services/it-professional-services/cloud-infrastructure-services.html">
+                                            Cloud &
+                                            Infrastructure Services</a></li>
+                                    <li><a href="/services/it-professional-services/technical-support-maintenance.html">
+                                            Technical Support
+                                            & Maintenance</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="row">
+                                <ul class="mega-links">
+
+                                    <li><a href="#">Service Assurance </a></li>
+
+                                    <li><a href="/services/service-assurance/oracle-unified-assurance.html">Oracle
+                                            Unified Assurance</a>
+                                    </li>
+                                    <li><a href="/services/service-assurance/service-now.html">ServiceNow </a></li>
+                                    <li><a href="/services/service-assurance/bmc-remedy.html">BMC Remedy</a></li>
+                                </ul>
+                            </div>
+                            <div class="row image-row">
+                                <img src="/images/consulting_2.png" alt="Descriptive Alt Text" />
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li><a href="#">Technology</a></li>
+                <li><a href="#">Company</a>
+                    <!-- <ul class="drop-megamenu">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Testimonial</a></li>
+            <li><a href="#">Resources</a></li>
+          </ul> -->
+
+                </li>
+                <li><button class="contact-button">Contact</button></li>
+
+                <li class="language-wrapper">
+                    <span id="eng"><a href="#" class="selected">EN</a></span>
+                    <span id="divider" style="color:#fff; font-size:16px; padding:0 18px;">|</span>
+                    <span id="fr"><a href="#">FR</a></span>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="page-hero">
+        <div class="page-hero-bg" style="background-image: url(/images/technology.jpg);"></div>
+        <div class="page-hero-content">
+            <h1>Web Mobile Development</h1>
+            <p>Our enthusiasm is to build intelligent, scalable, and future-ready software solutions that enable businesses to survive in the digital era.</p>
+        </div>
+    </section>
+
+    <footer class="custom-footer">
+        <div class="footer-top">
+            <div class="footer-col">
+                <h5>Services</h5>
+                <ul>
+                    <li>Application Software Development </li>
+                    <li>IT Consulting</li>
+                    <li>IT Professional Services</li>
+                    <li>Service Assurance</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>Technology</h5>
+                <ul>
+                    <li>Microsoft</li>
+                    <li>AWS</li>
+                    <li>Salesforce</li>
+                    <li>Azure Cloud</li>
+                    <li>Power Platform</li>
+                    <li>Mulesoft</li>
+                    <li>Needle GenAI Framework</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>IT Professional Services</h5>
+                <ul>
+                    <li>Supply Chain</li>
+                    <li>Manufacturing</li>
+                    <li>Finance</li>
+                    <li>Healthcare</li>
+                    <li>Energy</li>
+                    <li>Telecom</li>
+                    <li>Semiconductor</li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h5>Service Assurance</h5>
+                <ul>
+                    <li>Company</li>
+                    <li>Resources</li>
+                    <li>Careers</li>
+                    <li>Success Stories</li>
+                </ul>
+            </div>
+        </div>
+        <hr class="footer-divider">
+        <div class="footer-middle">
+            <div class="footer-logo-address">
+                <div class="footer-address-group">
+                    <div class="footer-address">
+                        <span class="fi fi-ca"></span>
+                        <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
+                        <span>5236, Philias Gagnon,
+                            Montreal, Quebec,<br>Canada
+                            H1R 3Z6</span>
+                    </div>
+                    <div class="footer-address">
+                        <span class="fi fi-us "></span>
+                        <span class="footer-office"><b>Missionmind IT Services LLC</b></span><br>
+                        <span>11745 Stoney Peak Dr, 207
+                            San Diego,<br>California, 92128, USA</span>
+                    </div>
+
+                    <div class="footer-address">
+                        <span class="fi fi-in"></span>
+
+                        <span class="footer-office"><b>Missionmind IT Services Private Limited</b></span><br>
+                        <span>8, Mariyamman Koil Street,
+                            Menambedu, Ambattur<br>Chennai,
+                            Tamil Nadu 600053, India.</span>
+                    </div>
+                    <div class="footer-address">
+                        <div><b>CALL</b></div>
+                        <div><span class="footer-icon">📞</span> <a href="tel:+18663457638">+1 (866) 345-7638</a>
+                        </div>
+                        <div><span class="footer-icon">✉️</span> <a
+                                href="mailto:info@softwebsolutions.com">info@softwebsolutions.com</a></div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <hr class="footer-divider">
+        <div class="footer-bottom">
+            <div class="footer-links">
+                <a href="#">Home</a>
+                <span>|</span>
+                <a href="#">Privacy Policy</a>
+                <span>|</span>
+                <a href="#">Cookie Policy</a>
+                <span>|</span>
+                <a href="#">CSR Policy</a>
+                <span>|</span>
+                <a href="#">Contact</a>
+                <span>|</span>
+                <a href="#">Legal and Copyright Notices</a>
+            </div>
+            <div class="footer-social-cert">
+                <div class="footer-social">
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                </div>
+                <div class="footer-cert">
+                    <img src="images/soc2.png" alt="SOC2" class="footer-cert-img">
+                    <img src="images/iso.png" alt="ISO" class="footer-cert-img">
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            © 2025 Softweb Solutions Inc. (An Avnet Company) All rights reserved.
+        </div>
+    </footer>
+
+    <script>
+        const navbar = document.querySelector('nav');
+        const wrapper = document.querySelector('nav .wrapper');
+        const logo = document.querySelector('.logo img');
+
+        const lightLogo = '/images/logo_white1.png';        // Default logo
+        const darkLogo = '/images/original_logo.png';     // Hover/active logo
+
+        let lastScrollTop = 0;
+
+        window.addEventListener('scroll', function () {
+            const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+
+            if (scrollTop === 0) {
+                // At the top: default theme
+                navbar.classList.remove('hidden');
+                wrapper.classList.remove('hover');
+                logo.src = lightLogo;
+
+            } else if (scrollTop > lastScrollTop) {
+                // Scrolling down
+                navbar.classList.add('hidden');
+                wrapper.classList.remove('hover');
+                logo.src = lightLogo;
+
+            } else if (scrollTop < lastScrollTop) {
+                // Scrolling up (but not at top)
+                navbar.classList.remove('hidden');
+                wrapper.classList.add('hover');
+                logo.src = darkLogo;
+            }
+
+            lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+        });
+
+        // Ensure hover still works when mouse enters
+        wrapper.addEventListener('mouseenter', () => {
+            wrapper.classList.add('hover');
+            logo.src = darkLogo;
+        });
+
+        wrapper.addEventListener('mouseleave', () => {
+            const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+            if (scrollTop === 0) {
+                wrapper.classList.remove('hover');
+                logo.src = lightLogo;
+            } else {
+                wrapper.classList.add('hover');
+                logo.src = darkLogo;
+            }
+        });
+    </script>
 </body>
 </html>
