--- a/services/service-assurance/oracle-unified-assurance.html
+++ b/services/service-assurance/oracle-unified-assurance.html
@@ -274,53 +274,26 @@
         <!-- Dynamic content will be injected here -->
       </div>
     </div>
+    
+  
   </section>
-  <!-- Tech Stack Section -->
-  <section class="page-techstack-section">
-    <h2 class="page-techstack-title">Tech stack</h2>
-    <div class="page-techstack-table">
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Frontend Development</span></div>
-        <div class="page-techstack-icons">
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nuxtjs/nuxtjs-plain-wordmark.svg" />
-
-        </div>
+    <!-- Call to Action Section -->
+  <section class="page-cta-section">
+    <div class="page-cta-content">
+      <h2>Looking for end-to-end full stack development tailored to your business goals?</h2>
+      <p>Our expert team delivers scalable, secure, and high-performance solutions for startups, enterprises, and
+        everything in between.</p>
+      <!-- <div class="fsd-cta-icons">
+        <span><i class="fa-solid fa-rocket"></i></span>
+        <span><i class="fa-solid fa-shield-halved"></i></span>
+        <span><i class="fa-solid fa-users"></i></span>
+      </div> -->
+      <div class="page-cta-action" id="book-consultation-btn">
+        share your requirements
       </div>
-      <div class="page-techstack-row">
-        <div class="page-techstack-label"><span>Backend Development</span></div>
-        <div class="page-techstack-icons">
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" />
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dot-net/dot-net-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" />
-
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" />
-
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" />
-
-        </div>
-      </div>
-
-
-
     </div>
   </section>
+
 
 
   <!-- Upgrade Process Section (layout_02.png style) -->
@@ -368,6 +341,54 @@
             they can use the new features and improvements accordingly.</div>
         </div>
       </div>
+    </div>
+  </section>
+    <!-- Tech Stack Section -->
+  <section class="page-techstack-section">
+    <h2 class="page-techstack-title">Tech stack</h2>
+    <div class="page-techstack-table">
+      <div class="page-techstack-row">
+        <div class="page-techstack-label"><span>Frontend Development</span></div>
+        <div class="page-techstack-icons">
+
+
+          <img
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angularjs/angularjs-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vuejs/vuejs-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/typescript/typescript-original.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nuxtjs/nuxtjs-plain-wordmark.svg" />
+
+        </div>
+      </div>
+      <div class="page-techstack-row">
+        <div class="page-techstack-label"><span>Backend Development</span></div>
+        <div class="page-techstack-icons">
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" />
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original-wordmark.svg" />
+
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dot-net/dot-net-original-wordmark.svg" />
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/csharp/csharp-original.svg" />
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original-wordmark.svg" />
+
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original-wordmark.svg" />
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" />
+
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nextjs/nextjs-original-wordmark.svg" />
+
+        </div>
+      </div>
+
+
+
     </div>
   </section>
 
@@ -434,6 +455,44 @@
       </div>
     </div>
   </section>
+
+    <!-- Connect Section (below stats section) -->
+    <div class="connect-section" style="background-image: url('/images/contact_page_bg.jpg');">
+        <div class="connect-container">
+            <div class="connect-left">
+                <div class="connect-title">Connect Now</div>
+                <div class="connect-desc">Data. Insights. Decisions. Outcomes. – <span class="connect-bold">Your
+                        journey. Our partnership.</span></div>
+                <div class="connect-question">What’s your next big ambition? <span class="connect-bold">Let’s discuss
+                        it!</span></div>
+            </div>
+            <div class="connect-right">
+                <form class="connect-form">
+                    <div class="form-group">
+                        <label for="connect-name">Name</label>
+                        <input type="text" id="connect-name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="connect-phone">Phone</label>
+                        <input type="tel" id="connect-phone" name="phone" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="connect-email">Email</label>
+                        <input type="email" id="connect-email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="connect-message">How can we help?</label>
+                        <textarea id="connect-message" name="message" rows="3" required></textarea>
+                    </div>
+                    <div class="form-group captcha-group">
+                        <input type="checkbox" id="connect-captcha" required>
+                        <label for="connect-captcha">I'm not a robot</label>
+                    </div>
+                    <button type="submit" class="connect-btn">Get in touch</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
   <footer class="custom-footer">
     <div class="footer-top">
@@ -676,6 +735,29 @@
       });
     });
   </script>
+      <script>
+        // Smooth scroll to connect-section on button click or hire button click
+        document.addEventListener('DOMContentLoaded', function () {
+            var btn = document.getElementById('book-consultation-btn');
+            var hireBtn = document.querySelector('.btn-hire');
+            function scrollToConnect() {
+                var connectSection = document.querySelector('.connect-section');
+                if (connectSection) {
+                    connectSection.scrollIntoView({ behavior: 'smooth' });
+                }
+            }
+            if (btn) {
+                btn.addEventListener('click', scrollToConnect);
+            }
+            if (hireBtn) {
+                hireBtn.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    scrollToConnect();
+                });
+            }
+        });
+    </script>
+
 
 </body>
 
